--- a/web/index.html
+++ b/web/index.html
@@ -4,13 +4,13 @@
   <base href="$FLUTTER_BASE_HREF">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Mountainindex - Twój tracker górskich zdobyczy">
+  <meta name="description" content="mountainindex - Twój tracker górskich zdobyczy">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Mountainindex">
+  <meta name="apple-mobile-web-app-title" content="mountainindex">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <link rel="icon" type="image/png" href="favicon.png"/>
-  <title>Mountainindex</title>
+  <title>mountainindex</title>
   <link rel="manifest" href="manifest.json">
   <script>
     var serviceWorkerVersion = null;
@@ -50,7 +50,7 @@
       width: 50px;
       height: 50px;
       border: 4px solid #e0e0e0;
-      border-top: 4px solid #2E7D32;
+      border-top: 4px solid #3D5A37;
       border-radius: 50%;
       animation: spin 1s linear infinite;
     }
@@ -60,16 +60,17 @@
     }
     .loading-text {
       margin-top: 20px;
-      font-family: 'Segoe UI', sans-serif;
-      color: #2E7D32;
+      font-family: 'Montserrat', 'Segoe UI', sans-serif;
+      color: #3D5A37;
       font-size: 18px;
+      font-weight: 500;
     }
   </style>
 </head>
 <body>
   <div class="loading" id="loading">
     <div class="loading-spinner"></div>
-    <p class="loading-text">Ładowanie Mountainindex...</p>
+    <p class="loading-text">Ładowanie mountainindex...</p>
   </div>
   <script src="flutter.js" defer></script>
   <script>
